test/end-to-end/compile-errors/assert-or-forbid-warnings.crow
main void()
	assert true : throw "true is not true"
	guard true : throw "true is not true"
